# sudoisytdl

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  build.sh  pyproject.toml  run.sh
sudoisytdl/: cli.py  config.py  tg.py  util.py  yt.py
tests/: test_sudoisytdl.py
